<resources>
    <string name="app_name">Smart City</string>
    <string name="application_title">Smart City</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_map">MyMapActivity</string>
    <string name="title_activity_upcoming_events">UpcomingEvents</string>
    <string name="getEventsListButton">Récupérer la liste des évènements</string>
    <string name="getMapButton">Afficher l\'itinéraire</string>
    <string name="API_KEY">AIzaSyA2h0_JGUTq9Ix1nqSHgXmAdRBUQfkSfqA</string>
    <string name="Geocoding_API_KEY">AIzaSyDoUEQPVEHEV0RIGqu838upq1gmoIMlS6Q</string>
    <string name="retrieving_events">Retrieving events...</string>
    <string name="title_activity_selected_event">SelectedEventActivity</string>
    <string name="verifyLocations">Vérifier les localisations</string>
    <string name="create_transport_request">Créer une demande de transport</string>
    <string name="getTransportRequestList">Récupérer la liste des demandes de transport</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="createEvent">Créer un évènement</string>
    <string name="firstLaunch">Bienvenue. Vous lancez Smart City pour la première fois. Nous allons commencer par vous créer un compte.</string>
    <string name="welcomeBack">Bon retour parmi nous.</string>
    <string name="username">Nom d\'utilisateur ou adresse e-mail</string>
    <string name="createAccount">Créer un compte</string>
    <string name="password">Mot de passe</string>
    <string name="incoherentCredentials">Vous devez remplir les deux champs.</string>
    <string name="connecting">Connexion au serveur...</string>
    <string name="success">Compte créé avec succès</string>
    <string name="unameTooLong">Nom d\'utilisateur trop long</string>
    <string name="semicolonInUname">Le caractère \':\' (deux points) est interdit dans le nom d\'utilisateur</string>
    <string name="unknownError">Une erreur inconnue s\'est produite</string>
    <string name="nameAlreadyUsed">Il existe déjà un compte d\'utilisateur avec ce nom</string>
    <string name="connected">Connexion établie.</string>
    <string name="title_activity_update_transport_request">UpdateTransportRequestActivity</string>
    <string name="connectToExistingAccount">Se connecter à un compte existant</string>
    <string name="wrongCredentials">Mauvais identifiants</string>
    <string name="disconnect">Déconnexion</string>
    <string name="title_activity_transport_request_list">TransportRequestListActivity</string>
    <string name="transportRequestListIntroduction">Voici vos différentes demandes de transports</string>
    <string name="updateTransportRequest">Modifier cette demande de transport</string>
    <string name="eventCreated">L\'évènement a bien été créé</string>
    <string name="wrongEndDate">Il y a une erreur dans la date de fin</string>
    <string name="wrongBeginDate">Il y a une erreur dans la date de début</string>
    <string name="playServiceRequired">Google Play Services required: after installing, close and relaunch this app.</string>
    <string name="unspecifiedAccount">Account unspecified.</string>
    <string name="noConnection">Pas de connection au réseau disponible.</string>
    <string name="errorRetrievingEvent">Error retrieving events!</string>
    <string name="noEventFound">Encore évènement trouvé</string>
    <string name="yourEvents">Voici vos prochains évènements:</string>
    <string name="noLocation">Localisation non trouvée</string>
    <string name="eventAlreadyRegistered">Cet évènement a déjà une demande de transport associée</string>
    <string name="fetchingRoute">Calcul en cours, attendez s\'il vous plait...</string>
    <string name="transportRequestCreated">La demande de transport a bien été créée</string>
    <string name="transportRequestCreatedButton">Demande de transport créée</string>
    <string name="verifying">Vérification en cours...</string>
    <string name="adressNotFound">L\'adresse n\'existe pas</string>
    <string name="wrongEnteredDate">Il y a une erreur dans la date entrée</string>
    <string name="modifiedTransportRequest">Demande de transport modifiée</string>
    <string name="startDateEditText">Adresse de départ</string>
    <string name="eventDateEditText">Adresse de l\'évènement</string>
</resources>
