<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textView2"
        android:visibility="invisible">

        <EditText
            android:id="@+id/editTextUname"
            android:hint="@string/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minEms="5"/>
        <EditText
            android:id="@+id/editTextPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minEms="5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:onClick="register"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connectToExistingAccount"
            android:onClick="connectToExistingAccount"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEvents"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textView2"
        >
        <Button
            android:id="@+id/getEventsListButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/getEventsListButton" />

        <Button
            android:id="@+id/createAnEventButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/createEvent" />

        <Button
            android:id="@+id/getTransportRequestListButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/getTransportRequestList" />
        <!--
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            -->

        <ListView
            android:id="@+id/transportRequestListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
