<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/backgroundtransportrequestactivity"
    tools:context="com.example.androidclient.TransportRequestListActivity">

    <TextView
        android:id="@+id/transportRequestListIntroduction"
        android:text="@string/transportRequestListIntroduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <ListView
        android:id="@+id/transportRequestListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:layout_weight="50" />

    <Button
        android:id="@+id/selectedTRToUpdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:text="@string/updateTransportRequest"/>

    <Button
        android:id="@+id/getSelectedTRMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:text="@string/getMapButton"/>

</LinearLayout>
